added in tax indicator funconality

--- a/index.html
+++ b/index.html
@@ -878,6 +878,12 @@
       <div
         class="bg-white rounded-2xl max-w-5xl mx-auto shadow-xl py-5 my-5 dark:bg-neutral-800 dark:text-white"
       >
+        <div class="text-center text-white tracking-wider">
+          <small
+            class="bg-emerald-600 p-2 dark:text-white dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 taxes-display"
+            >Taxes Included In Price</small
+          >
+        </div>
         <form class="form-control">
           <!-- Square Footage Select -->
           <div>
@@ -1045,7 +1051,7 @@
                 <!-- End Of Change Hours Back Icon -->
                 <select
                   id="change-hours-deep"
-                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700"
+                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
                   <option value="">Change Hours</option>
                   <option value="-2.00">-2.00</option>
@@ -1144,7 +1150,7 @@
                 </span>
                 <select
                   id="change-hours-general"
-                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700"
+                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
                   <option value="">Change Hours</option>
                   <option value="-2">-2</option>
@@ -1242,7 +1248,7 @@
                 </span>
                 <select
                   id="change-hours-weekly"
-                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700"
+                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
                   <option value="">Change Hours</option>
                   <option value="-2">-2</option>
@@ -1340,7 +1346,7 @@
                 </span>
                 <select
                   id="change-hours-bi-weekly"
-                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700"
+                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
                   <option value="">Change Hours</option>
                   <option value="-2">-2</option>
@@ -1438,7 +1444,7 @@
                 </span>
                 <select
                   id="change-hours-monthly"
-                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700"
+                  class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
                   <option value="">Change Hours</option>
                   <option value="-2">-2</option>
