--- a/index.html
+++ b/index.html
@@ -376,12 +376,17 @@
           <!-- End Of Quote Heading -->
           <!-- Quote Info -->
           <div class="quote-info">
+            <!-- Hours Changed -->
+            <small
+              class="single-hours-changed block text-center text-xl"
+            ></small>
+            <!-- End Of Hours Changed -->
             <!-- Amount Per Hour -->
             <small class="single-per-hour block text-center text-xl"></small>
             <!-- End Of Amount Per Hour -->
-            <!-- Amount Per Hour -->
+            <!-- Tax Rate -->
             <small class="single-tax-rate block text-center text-xl"></small>
-            <!-- End Of Amount Per Hour -->
+            <!-- End Of Tax Rate -->
             <!-- Clean Type -->
             <h3
               class="text-center text-2xl tracking-widest clean-type font-semibold"
@@ -515,9 +520,6 @@
               <div
                 class="bg-slate-200 py-2 text-center mx-auto mb-2 w-full px-2"
               >
-                <!-- <p
-                  class="single-notes text-black tracking-wider text-sm px-2"
-                ></p> -->
                 <textarea
                   id="single-notes"
                   cols="30"
@@ -1082,7 +1084,7 @@
                   id="change-hours-deep"
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
-                  <option value="">Change Hours</option>
+                  <option value="0">Change Hours</option>
                   <option value="-2.00">-2.00</option>
                   <option value="-1.75">-1.75</option>
                   <option value="-1.50">-1.50</option>
@@ -1181,7 +1183,7 @@
                   id="change-hours-general"
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
-                  <option value="">Change Hours</option>
+                  <option value="0">Change Hours</option>
                   <option value="-2">-2</option>
                   <option value="-1.75">-1.75</option>
                   <option value="-1.50">-1.50</option>
@@ -1279,7 +1281,7 @@
                   id="change-hours-weekly"
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
-                  <option value="">Change Hours</option>
+                  <option value="0">Change Hours</option>
                   <option value="-2">-2</option>
                   <option value="-1.75">-1.75</option>
                   <option value="-1.50">-1.50</option>
@@ -1377,7 +1379,7 @@
                   id="change-hours-bi-weekly"
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
-                  <option value="">Change Hours</option>
+                  <option value="0">Change Hours</option>
                   <option value="-2">-2</option>
                   <option value="-1.75">-1.75</option>
                   <option value="-1.50">-1.50</option>
@@ -1475,7 +1477,7 @@
                   id="change-hours-monthly"
                   class="border-2 font-serif py-[.35rem] px-1 text-sm cursor-pointer focus:outline-emerald-600 dark:bg-emerald-700 change-individual"
                 >
-                  <option value="">Change Hours</option>
+                  <option value="0">Change Hours</option>
                   <option value="-2">-2</option>
                   <option value="-1.75">-1.75</option>
                   <option value="-1.50">-1.50</option>
