added hours changed to show in both main quote and other quotes when saving a quote

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
               </button>
               <!-- Show Cleans -->
               <div
-                class="w-full h-[230px] xss:h-[190px] xs:h-[158px] overflow-x-hidden overflow-y-hidden mx-auto hidden show-cleans slide-container relative"
+                class="w-full h-[230px] xss:h-[190px] xs:h-[178px] overflow-x-hidden overflow-y-hidden mx-auto hidden show-cleans slide-container relative"
               >
                 <button
                   class="absolute top-1/2 right-0 text-xl hover:animate-bounce cursor-pointer z-10 next-btn"
@@ -571,11 +571,14 @@
                   class="slide absolute top-0 left-0 w-full transition-transform duration-300"
                 >
                   <!-- Price Container -->
-                  <h3
-                    class="tracking-widest text-center text-xl font-semibold mb-1"
-                  >
+                  <h3 class="tracking-widest text-center text-xl font-semibold">
                     Deep Clean
                   </h3>
+                  <!-- Deep Changed -->
+                  <small
+                    class="tracking-wider font-semibold deep-hours-changed"
+                  ></small>
+                  <!-- End Of Deep Changed -->
                   <div class="bg-slate-200 py-2 text-center w-4/5 mx-auto mb-3">
                     <!-- Price Logo -->
                     <span
@@ -616,11 +619,14 @@
                   class="slide absolute top-0 left-full w-full transition-transform duration-300"
                 >
                   <!-- Price Container -->
-                  <h3
-                    class="tracking-widest text-center text-xl font-semibold mb-1"
-                  >
+                  <h3 class="tracking-widest text-center text-xl font-semibold">
                     General Clean
                   </h3>
+                  <!-- General Changed -->
+                  <small
+                    class="tracking-wider font-semibold general-hours-changed"
+                  ></small>
+                  <!-- End Of General Changed -->
                   <div class="bg-slate-200 py-2 text-center w-4/5 mx-auto mb-3">
                     <!-- Price Logo -->
                     <span
@@ -661,11 +667,14 @@
                   class="slide absolute top-0 left-[200%] w-full transition-transform duration-300"
                 >
                   <!-- Price Container -->
-                  <h3
-                    class="tracking-widest text-center text-xl font-semibold mb-1"
-                  >
+                  <h3 class="tracking-widest text-center text-xl font-semibold">
                     Weekly Service
                   </h3>
+                  <!-- Weekly Changed -->
+                  <small
+                    class="tracking-wider font-semibold weekly-hours-changed"
+                  ></small>
+                  <!-- End Of Weekly Changed -->
                   <div class="bg-slate-200 py-2 text-center w-4/5 mx-auto mb-3">
                     <!-- Price Logo -->
                     <span
@@ -706,11 +715,14 @@
                   class="slide absolute top-0 left-[300%] w-full transition-transform duration-300"
                 >
                   <!-- Price Container -->
-                  <h3
-                    class="tracking-widest text-center text-xl font-semibold mb-1"
-                  >
+                  <h3 class="tracking-widest text-center text-xl font-semibold">
                     Bi-Weekly Service
                   </h3>
+                  <!-- Bi-Weekly Changed -->
+                  <small
+                    class="tracking-wider font-semibold bi-weekly-hours-changed"
+                  ></small>
+                  <!-- End Of Bi-Weekly Changed -->
                   <div class="bg-slate-200 py-2 text-center w-4/5 mx-auto mb-3">
                     <!-- Price Logo -->
                     <span
@@ -751,11 +763,14 @@
                   class="slide absolute top-0 left-[400%] w-full transition-transform duration-300"
                 >
                   <!-- Price Container -->
-                  <h3
-                    class="tracking-widest text-center text-xl font-semibold mb-1"
-                  >
+                  <h3 class="tracking-widest text-center text-xl font-semibold">
                     Monthy Service
                   </h3>
+                  <!-- Monthly Changed -->
+                  <small
+                    class="tracking-wider font-semibold monthly-hours-changed"
+                  ></small>
+                  <!-- End Of Monthly Changed -->
                   <div class="bg-slate-200 py-2 text-center w-4/5 mx-auto mb-3">
                     <!-- Price Logo -->
                     <span
