made the cleaning type stand out more with a green background

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <!-- End Of Tax Rate -->
             <!-- Clean Type -->
             <h3
-              class="text-center text-2xl tracking-widest clean-type font-semibold"
+              class="text-center text-white capitalize text-2xl tracking-widest font-bold bg-emerald-600 clean-type"
             ></h3>
             <!-- Square Footage -->
             <div
