added in fuctionallity of being able to adjust all of the diffrent clean hoursin the settings pannel

--- a/index.html
+++ b/index.html
@@ -113,6 +113,151 @@
             <!-- End Of Toggler Name -->
           </div>
           <!-- End Of Toggler Wrapper (Tax Toggle) -->
+
+          <!-- Hours Scale -->
+          <form class="clean-adjust">
+            <!-- Deep Hours Adjust -->
+            <div>
+              <label for="deep-clean-adjust">Deep Clean Adjust</label>
+              <select
+                name="deep-clean-adjust"
+                id="deep-clean-adjust"
+                class="deep-clean-adjust"
+              >
+                <option value="-2">-2</option>
+                <option value="-1.75">-1.75</option>
+                <option value="-1.50">-1.50</option>
+                <option value="-1.25">-1.25</option>
+                <option value="-1">-1</option>
+                <option value="-.75">-.75</option>
+                <option value="-.50">-.50</option>
+                <option value="-.25">-.25</option>
+                <option value="0" selected>0</option>
+                <option value=".25">+.25</option>
+                <option value=".50">+.50</option>
+                <option value=".75">+.75</option>
+                <option value="1">+1</option>
+                <option value="1.25">+1.25</option>
+                <option value="1.50">+1.50</option>
+                <option value="1.75">+1.75</option>
+                <option value="2">+2</option>
+              </select>
+            </div>
+            <!-- End Of Deep Hours Adjust -->
+            <!-- General Hours Adjust -->
+            <div>
+              <label for="general-clean-adjust">General Clean Adjust</label>
+              <select
+                name="general-clean-adjust"
+                id="general-clean-adjust"
+                class="general-clean-adjust"
+              >
+                <option value="-2">-2</option>
+                <option value="-1.75">-1.75</option>
+                <option value="-1.50">-1.50</option>
+                <option value="-1.25">-1.25</option>
+                <option value="-1">-1</option>
+                <option value="-.75">-.75</option>
+                <option value="-.50">-.50</option>
+                <option value="-.25">-.25</option>
+                <option value="0" selected>0</option>
+                <option value=".25">+.25</option>
+                <option value=".50">+.50</option>
+                <option value=".75">+.75</option>
+                <option value="1">+1</option>
+                <option value="1.25">+1.25</option>
+                <option value="1.50">+1.50</option>
+                <option value="1.75">+1.75</option>
+                <option value="2">+2</option>
+              </select>
+            </div>
+            <!-- End Of General Hours Adjust -->
+            <!-- Weekly Hours Adjust -->
+            <div>
+              <label for="weekly-clean-adjust">Weekly Clean Adjust</label>
+              <select
+                name="weekly-clean-adjust"
+                id="weekly-clean-adjust"
+                class="weekly-clean-adjust"
+              >
+                <option value="-2">-2</option>
+                <option value="-1.75">-1.75</option>
+                <option value="-1.50">-1.50</option>
+                <option value="-1.25">-1.25</option>
+                <option value="-1">-1</option>
+                <option value="-.75">-.75</option>
+                <option value="-.50">-.50</option>
+                <option value="-.25">-.25</option>
+                <option value="0" selected>0</option>
+                <option value=".25">+.25</option>
+                <option value=".50">+.50</option>
+                <option value=".75">+.75</option>
+                <option value="1">+1</option>
+                <option value="1.25">+1.25</option>
+                <option value="1.50">+1.50</option>
+                <option value="1.75">+1.75</option>
+                <option value="2">+2</option>
+              </select>
+            </div>
+            <!-- End Of Weekly Hours Adjust -->
+            <!-- Bi-Weekly Hours Adjust -->
+            <div>
+              <label for="bi-weekly-clean-adjust">Bi-Weekly Clean Adjust</label>
+              <select
+                name="bi-weekly-clean-adjust"
+                id="bi-weekly-clean-adjust"
+                class="bi-weekly-clean-adjust"
+              >
+                <option value="-2">-2</option>
+                <option value="-1.75">-1.75</option>
+                <option value="-1.50">-1.50</option>
+                <option value="-1.25">-1.25</option>
+                <option value="-1">-1</option>
+                <option value="-.75">-.75</option>
+                <option value="-.50">-.50</option>
+                <option value="-.25">-.25</option>
+                <option value="0" selected>0</option>
+                <option value=".25">+.25</option>
+                <option value=".50">+.50</option>
+                <option value=".75">+.75</option>
+                <option value="1">+1</option>
+                <option value="1.25">+1.25</option>
+                <option value="1.50">+1.50</option>
+                <option value="1.75">+1.75</option>
+                <option value="2">+2</option>
+              </select>
+            </div>
+            <!-- End Of Bi-Weekly Hours Adjust -->
+            <!-- Monthly Hours Adjust -->
+            <div>
+              <label for="monthly-clean-adjust">Monthly Clean Adjust</label>
+              <select
+                name="monthly-clean-adjust"
+                id="monthly-clean-adjust"
+                class="monthly-clean-adjust"
+              >
+                <option value="-2">-2</option>
+                <option value="-1.75">-1.75</option>
+                <option value="-1.50">-1.50</option>
+                <option value="-1.25">-1.25</option>
+                <option value="-1">-1</option>
+                <option value="-.75">-.75</option>
+                <option value="-.50">-.50</option>
+                <option value="-.25">-.25</option>
+                <option value="0" selected>0</option>
+                <option value=".25">+.25</option>
+                <option value=".50">+.50</option>
+                <option value=".75">+.75</option>
+                <option value="1">+1</option>
+                <option value="1.25">+1.25</option>
+                <option value="1.50">+1.50</option>
+                <option value="1.75">+1.75</option>
+                <option value="2">+2</option>
+              </select>
+            </div>
+            <!-- End Of Monthly Hours Adjust -->
+          </form>
+          <!-- End Of Hours Scale -->
         </div>
       </div>
     </div>
