--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       >
         <div class="px-4 pt-2">
           <div class="flex items-center justify-between border-b-2 mb-4 pb-4">
-            <small class="tracking-widest font-semibold text-xl"
+            <small class="tracking-widest font-semibold text-xl font-serif"
               >App Settings</small
             >
             <button class="close-modal">
@@ -89,14 +89,15 @@
             </div>
             <!-- End Of Toggler -->
             <!-- Toggler Name -->
-            <small class="dark:text-white tracking-widest font-semibold"
-              >Toggle dark mode</small
-            >
+            <span
+              class="dark:text-white tracking-widest font-semibold font-serif"
+              >Toggle dark mode
+            </span>
             <!-- End Of Toggler Name -->
           </div>
           <!-- End Of Toggler Wrapper (Dark Mode) -->
           <!-- Toggler Wrapper (Tax Toggle) -->
-          <div class="flex space-x-2 items-center">
+          <div class="flex space-x-2 items-center border-b-2 pb-4">
             <!-- Toggler -->
             <div
               class="bg-green-700 w-12 h-6 cursor-pointer rounded-3xl flex items-center transition-all toggler-tax"
@@ -107,22 +108,22 @@
             </div>
             <!-- End Of Toggler -->
             <!-- Toggler Name -->
-            <small class="dark:text-white tracking-widest font-semibold"
-              >Include tax into price</small
-            >
+            <span
+              class="dark:text-white tracking-widest font-semibold font-serif"
+              >Include tax into price
+            </span>
             <!-- End Of Toggler Name -->
           </div>
           <!-- End Of Toggler Wrapper (Tax Toggle) -->
 
           <!-- Hours Scale -->
-          <form class="clean-adjust">
+          <form class="clean-adjust space-y-4 mt-4">
             <!-- Deep Hours Adjust -->
-            <div>
-              <label for="deep-clean-adjust">Deep Clean Adjust</label>
+            <div class="space-x-2 border-b-2 pb-4">
               <select
                 name="deep-clean-adjust"
                 id="deep-clean-adjust"
-                class="deep-clean-adjust"
+                class="deep-clean-adjust bg-neutral-600 font-bold dark:bg-neutral-800 text-white focus:outline-emerald-600"
               >
                 <option value="-2">-2</option>
                 <option value="-1.75">-1.75</option>
@@ -142,15 +143,19 @@
                 <option value="1.75">+1.75</option>
                 <option value="2">+2</option>
               </select>
+              <label
+                for="deep-clean-adjust"
+                class="dark:text-white tracking-widest font-semibold font-serif"
+                >Deep Clean Adjust</label
+              >
             </div>
             <!-- End Of Deep Hours Adjust -->
             <!-- General Hours Adjust -->
-            <div>
-              <label for="general-clean-adjust">General Clean Adjust</label>
+            <div class="space-x-2 border-b-2 pb-4">
               <select
                 name="general-clean-adjust"
                 id="general-clean-adjust"
-                class="general-clean-adjust"
+                class="general-clean-adjust font-bold bg-neutral-600 dark:bg-neutral-800 text-white focus:outline-emerald-600"
               >
                 <option value="-2">-2</option>
                 <option value="-1.75">-1.75</option>
@@ -170,15 +175,19 @@
                 <option value="1.75">+1.75</option>
                 <option value="2">+2</option>
               </select>
+              <label
+                for="general-clean-adjust"
+                class="dark:text-white tracking-widest font-semibold font-serif"
+                >General Clean Adjust</label
+              >
             </div>
             <!-- End Of General Hours Adjust -->
             <!-- Weekly Hours Adjust -->
-            <div>
-              <label for="weekly-clean-adjust">Weekly Clean Adjust</label>
+            <div class="space-x-2 border-b-2 pb-4">
               <select
                 name="weekly-clean-adjust"
                 id="weekly-clean-adjust"
-                class="weekly-clean-adjust"
+                class="weekly-clean-adjust font-bold bg-neutral-600 dark:bg-neutral-800 text-white focus:outline-emerald-600"
               >
                 <option value="-2">-2</option>
                 <option value="-1.75">-1.75</option>
@@ -198,15 +207,19 @@
                 <option value="1.75">+1.75</option>
                 <option value="2">+2</option>
               </select>
+              <label
+                for="weekly-clean-adjust"
+                class="dark:text-white tracking-widest font-semibold font-serif"
+                >Weekly Clean Adjust</label
+              >
             </div>
             <!-- End Of Weekly Hours Adjust -->
             <!-- Bi-Weekly Hours Adjust -->
-            <div>
-              <label for="bi-weekly-clean-adjust">Bi-Weekly Clean Adjust</label>
+            <div class="space-x-2 border-b-2 pb-4">
               <select
                 name="bi-weekly-clean-adjust"
                 id="bi-weekly-clean-adjust"
-                class="bi-weekly-clean-adjust"
+                class="bi-weekly-clean-adjust font-bold bg-neutral-600 dark:bg-neutral-800 text-white focus:outline-emerald-600"
               >
                 <option value="-2">-2</option>
                 <option value="-1.75">-1.75</option>
@@ -226,15 +239,19 @@
                 <option value="1.75">+1.75</option>
                 <option value="2">+2</option>
               </select>
+              <label
+                for="bi-weekly-clean-adjust"
+                class="dark:text-white tracking-widest font-semibold font-serif"
+                >Bi-Weekly Clean Adjust</label
+              >
             </div>
             <!-- End Of Bi-Weekly Hours Adjust -->
             <!-- Monthly Hours Adjust -->
-            <div>
-              <label for="monthly-clean-adjust">Monthly Clean Adjust</label>
+            <div class="space-x-2 border-b-2 pb-4">
               <select
                 name="monthly-clean-adjust"
                 id="monthly-clean-adjust"
-                class="monthly-clean-adjust"
+                class="monthly-clean-adjust font-bold bg-neutral-600 dark:bg-neutral-800 text-white focus:outline-emerald-600"
               >
                 <option value="-2">-2</option>
                 <option value="-1.75">-1.75</option>
@@ -254,6 +271,11 @@
                 <option value="1.75">+1.75</option>
                 <option value="2">+2</option>
               </select>
+              <label
+                for="monthly-clean-adjust"
+                class="dark:text-white tracking-widest font-semibold font-serif"
+                >Monthly Clean Adjust</label
+              >
             </div>
             <!-- End Of Monthly Hours Adjust -->
           </form>
