fixed issue with settings not looking good on mobile screens

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <!-- End Of Toggler -->
             <!-- Toggler Name -->
             <span
-              class="dark:text-white tracking-widest font-semibold font-serif"
+              class="dark:text-white tracking-widest font-semibold text-xs xs:text-base sm:font-serif"
               >Toggle dark mode
             </span>
             <!-- End Of Toggler Name -->
@@ -109,7 +109,7 @@
             <!-- End Of Toggler -->
             <!-- Toggler Name -->
             <span
-              class="dark:text-white tracking-widest font-semibold font-serif"
+              class="dark:text-white tracking-widest font-semibold text-xs xs:text-base sm:font-serif"
               >Include tax into price
             </span>
             <!-- End Of Toggler Name -->
@@ -145,7 +145,7 @@
               </select>
               <label
                 for="deep-clean-adjust"
-                class="dark:text-white tracking-widest font-semibold font-serif"
+                class="dark:text-white tracking-widest font-semibold text-xs xs:text-sm md:text-base sm:font-serif"
                 >Deep Clean Adjust</label
               >
             </div>
@@ -177,7 +177,7 @@
               </select>
               <label
                 for="general-clean-adjust"
-                class="dark:text-white tracking-widest font-semibold font-serif"
+                class="dark:text-white tracking-widest font-semibold text-xs xs:text-sm md:text-base sm:font-serif"
                 >General Clean Adjust</label
               >
             </div>
@@ -209,7 +209,7 @@
               </select>
               <label
                 for="weekly-clean-adjust"
-                class="dark:text-white tracking-widest font-semibold font-serif"
+                class="dark:text-white tracking-widest font-semibold text-xs xs:text-sm md:text-base sm:font-serif"
                 >Weekly Clean Adjust</label
               >
             </div>
@@ -241,7 +241,7 @@
               </select>
               <label
                 for="bi-weekly-clean-adjust"
-                class="dark:text-white tracking-widest font-semibold font-serif"
+                class="dark:text-white tracking-widest font-semibold text-xs xs:text-sm md:text-base sm:font-serif"
                 >Bi-Weekly Clean Adjust</label
               >
             </div>
@@ -273,7 +273,7 @@
               </select>
               <label
                 for="monthly-clean-adjust"
-                class="dark:text-white tracking-widest font-semibold font-serif"
+                class="dark:text-white tracking-widest font-semibold text-xs xs:text-sm md:text-base sm:font-serif"
                 >Monthly Clean Adjust</label
               >
             </div>
