commited all cleans info in sidebar

--- a/index.html
+++ b/index.html
@@ -3124,7 +3124,7 @@
           <!-- End Of Save Icon -->
           <!-- End Of Settings Icon -->
           <!-- Deep Icon -->
-          <div
+          <!-- <div
             class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px]"
           >
             <span
@@ -3136,10 +3136,10 @@
                 class="fa-solid fa-hand-sparkles transition-all text-lg hover:scale-110 hover:text-white md:hover:text-emerald-600 hover:rotate-[360deg] duration-200"
               ></i>
             </a>
-          </div>
+          </div> -->
           <!-- End Of Deep Icon -->
           <!-- General Icon -->
-          <div
+          <!-- <div
             class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px]"
           >
             <span
@@ -3151,10 +3151,10 @@
                 class="fa-solid fa-spray-can-sparkles transition-all text-lg hover:scale-110 hover:text-white md:hover:text-emerald-600 hover:rotate-[360deg] duration-200 group-hover:md:ml-1"
               ></i>
             </a>
-          </div>
+          </div> -->
           <!-- End Of General Icon -->
           <!-- Maintenance Icon -->
-          <div class="group-hover:md:bg-slate-100 group-hover:md:p-2">
+          <!-- <div class="group-hover:md:bg-slate-100 group-hover:md:p-2">
             <span
               class="font-semibold hidden md:group-hover:inline-block tracking-widest"
               >Maint CL</span
@@ -3164,7 +3164,7 @@
                 class="fa-solid fa-calendar-check transition-all text-lg hover:scale-110 hover:text-white md:ml-0 md:hover:text-emerald-600 hover:rotate-[360deg] duration-200"
               ></i>
             </a>
-          </div>
+          </div> -->
           <!-- End Of Maintenance Icon -->
         </div>
       </div>
