fixed change hours settings to update right away, unstead of having to get a new quote to update changes

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <select
                     name="deep-clean-adjust-1000-1500"
                     id="deep-clean-adjust-1000-1500"
-                    class="deep-clean-adjust-1000-1500 select-1 bg-neutral-600 font-bold dark:bg-neutral-800 text-white focus:outline-emerald-600"
+                    class="deep-clean-adjust-1000-1500 select-1 select-adjust bg-neutral-600 font-bold dark:bg-neutral-800 text-white focus:outline-emerald-600"
                   ></select>
                   <label
                     for="deep-clean-adjust-1000-1500"
