added to make taxes toggle work RIGHT AWAY instead of having to get a new quote to kick in

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         class="fixed top-2 left-1/2 w-3/4 max-w-md transform -translate-x-1/2 bg-gradient-to-br from-emerald-700 to-neutral-800 text-center text-white tracking-widest p-2 shadow-xl rounded-xl border-2 border-white transition-all alert-tax hidden opacity-0"
       >
         <span
-          class="inline-flex items-center justify-center rounded-full bg-red-600"
+          class="message-exclamation inline-flex items-center justify-center rounded-full bg-red-600"
         >
           <i class="fa-solid fa-circle-exclamation text-3xl"></i
         ></span>
@@ -5892,8 +5892,8 @@
         class="bg-white rounded-2xl max-w-5xl mx-auto shadow-xl py-5 my-5 dark:bg-neutral-800 dark:text-white"
       >
         <div class="text-center text-white tracking-wider">
-          <small class="bg-emerald-600 py-2 px-4 rounded-full taxes-display"
-            >Taxes Included In Price</small
+          <span class="bg-emerald-600 py-2 px-4 rounded-full taxes-display"
+            >Taxes Included In Price</span
           >
         </div>
         <form class="form-control">
