fixed dark mode to be stored in local storage

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               class="bg-gray-500 w-12 h-6 cursor-pointer rounded-3xl toggler dark:bg-green-700 flex items-center transition-all"
             >
               <div
-                class="bg-white w-6 h-6 transform scale-75 rounded-3xl transition-transform dark:bg-black flex items-center justify-center dark:translate-x-6"
+                class="bg-white w-6 h-6 transform scale-75 rounded-3xl transition-transform dark:bg-black flex items-center justify-center dark:translate-x-6 dark-toggle-round"
               >
                 <span class="sun">
                   <i class="fa-solid fa-sun scale-75 text-yellow-500"></i>
