added close icon to settings alert modal

--- a/index.html
+++ b/index.html
@@ -48,13 +48,20 @@
       <div
         class="fixed top-2 left-1/2 w-3/4 max-w-md transform -translate-x-1/2 bg-gradient-to-br from-emerald-700 to-neutral-800 text-center text-white tracking-widest p-2 shadow-xl rounded-xl border-2 border-white transition-all alert-tax hidden opacity-0"
       >
-        <span
-          class="message-exclamation inline-flex items-center justify-center rounded-full bg-red-600"
-        >
-          <i class="fa-solid fa-circle-exclamation text-3xl"></i
-        ></span>
-        <p class="tracking-widest mt-1 tax-text">Quote Saved</p>
-        <span class="bg-red-600 inline-block px-3 span-tax-text"></span>
+        <div class="relative">
+          <span
+            class="message-exclamation inline-flex items-center justify-center rounded-full bg-red-600"
+          >
+            <i class="fa-solid fa-circle-exclamation text-3xl"></i
+          ></span>
+          <button class="absolute top-0 right-1">
+            <i
+              class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close-alert"
+            ></i>
+          </button>
+          <p class="tracking-widest mt-1 tax-text">Quote Saved</p>
+          <span class="bg-red-600 inline-block px-3 span-tax-text"></span>
+        </div>
       </div>
       <div
         class="bg-white p-3 shadow-lg rounded-xl w-[85vw] max-w-md dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
