added required label on save quote modal form

--- a/index.html
+++ b/index.html
@@ -5149,6 +5149,7 @@
                 class="text-emerald-600 tracking-widest font-semibold mr-4"
                 >Name:</label
               >
+              <small class="text-red-500 font-bold">** Required **</small>
               <input
                 type="text"
                 name="name"
