--- a/index.html
+++ b/index.html
@@ -5132,15 +5132,22 @@
             <div
               class="fixed top-2 left-1/2 w-3/4 max-w-md transform -translate-x-1/2 bg-gradient-to-br from-emerald-700 to-neutral-800 text-center text-white tracking-widest p-2 shadow-xl rounded-xl border-2 border-white transition-all alert-saving-form hidden opacity-0"
             >
-              <span
-                class="inline-flex items-center justify-center rounded-full bg-red-600"
-              >
-                <i class="fa-solid fa-circle-exclamation text-3xl"></i
-              ></span>
-              <p class="tracking-widest mt-3 saving-text">Quote Saved</p>
-              <span
-                class="bg-red-600 inline-block px-3 span-saving-text"
-              ></span>
+              <div class="relative">
+                <span
+                  class="inline-flex items-center justify-center rounded-full bg-red-600"
+                >
+                  <i class="fa-solid fa-circle-exclamation text-3xl"></i
+                ></span>
+                <p class="tracking-widest mt-3 saving-text">Quote Saved</p>
+                <span
+                  class="bg-red-600 inline-block px-3 span-saving-text"
+                ></span>
+                <span class="absolute top-0 right-1 cursor-pointer">
+                  <i
+                    class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close-save-alert"
+                  ></i>
+                </span>
+              </div>
             </div>
             <!-- Name Input -->
             <div>
