added if taxes are included or not into saved quote info showen, also think i fixed issue with mobile not displaying currentQuote on name click

--- a/index.html
+++ b/index.html
@@ -5376,6 +5376,8 @@
             <div
               class="square-foot-val text-center font-semibold text-xl mb-3"
             ></div>
+            <!-- Taxes Included In Price -->
+            <div class="tax-included text-center"></div>
             <!-- Price Container -->
             <div class="bg-slate-200 py-2 text-center mx-auto mb-3 w-full px-2">
               <!-- Price Logo -->
