fixed issue with cleaning type having white space in it

--- a/index.html
+++ b/index.html
@@ -6020,6 +6020,7 @@
               <!-- End Of Hours Num Icon  -->
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                data-id="deep-clean"
               >
                 deep clean
               </h3>
@@ -6140,6 +6141,7 @@
               ></small>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                data-id="general-clean"
               >
                 general clean
               </h3>
@@ -6238,6 +6240,7 @@
               ></small>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                data-id="weekly-price"
               >
                 weekly price
               </h3>
@@ -6336,6 +6339,7 @@
               ></small>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                data-id="bi-weekly-price"
               >
                 bi-weekly price
               </h3>
@@ -6434,6 +6438,7 @@
               ></small>
               <h3
                 class="capitalize tracking-wider font-bold font-serif text-xl my-4 cleaning-type"
+                data-id="monthly-price"
               >
                 monthly price
               </h3>
